WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39845
[v8] Undefined script URL should be converted to an emtpy WebCore::String
https://bugs.webkit.org/show_bug.cgi?id=39845
Summary
[v8] Undefined script URL should be converted to an emtpy WebCore::String
Yury Semikhatsky
Reported
2010-05-27 09:11:14 PDT
[v8] Undefined script URL should be converted to an emtpy WebCore::String
Attachments
Patch
(1.94 KB, patch)
2010-05-27 09:17 PDT
,
Yury Semikhatsky
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2010-05-27 09:17:38 PDT
Created
attachment 57252
[details]
Patch
Yury Semikhatsky
Comment 2
2010-05-27 09:26:40 PDT
Comment on
attachment 57252
[details]
Patch Clearing flags on attachment: 57252 Committed
r60308
: <
http://trac.webkit.org/changeset/60308
>
Yury Semikhatsky
Comment 3
2010-05-27 09:26:49 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 4
2010-05-27 10:25:23 PDT
http://trac.webkit.org/changeset/60308
might have broken Tiger Intel Release The following changes are on the blame list:
http://trac.webkit.org/changeset/60305
http://trac.webkit.org/changeset/60306
http://trac.webkit.org/changeset/60307
http://trac.webkit.org/changeset/60308
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug