2010-05-27  Yury Semikhatsky  <yurys@chromium.org>

Reviewed by Pavel Feldman.

        [v8] Web Inspector: undefined script URL value should be converted to an emtpy
        WebCore::String instead of "undefined" string. Otherwise it's shown
        in the Scripts panel with "undefined:<line no>" URL.
        https://bugs.webkit.org/show_bug.cgi?id=39845

        * bindings/v8/ScriptDebugServer.cpp:
        (WebCore::ScriptDebugServer::dispatchDidParseSource):

Canonical link: https://commits.webkit.org/51359@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60308 268f45cc-cd09-0410-ab3c-d52691b4dbfc